2002-10-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: ([-getInfoForFile:application:type:])
	Make an exception for directories without file extensions ... never
	return plain type for them even if apps claim to open them.

Wed Oct  2 11:26:21 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextView.m
	([-shouldChangeTextInRange:replacementString:]): Immediately
	return NO if not editable; do not send out textShouldBeginEditing:
	and textDidBeginEditingNotification unless the textview is already
	first responder (Patch by David Ayers <d.ayers@inode.at>).

2002-10-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: ([-getInfoForFile:application:type:])
	Try to return a plain file type for directories which are openable
	by some app.

2002-10-01  Adam Fedor  <fedor@gnu.org>

	* Tools/gsnd/portaudio/pa_unix_oss/pa_unix_oss.c
	(PaHost_WatchDogProc): usleep can have a void return (Modified
	patch from Charles Philip Chan).

	* Source/NSBrowserCell.m (-drawInteriorWithFrame:inView:): 
	Use NSCompositeSourceOver.

Tue Oct  1 17:07:25 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.h (_lineLayoutInformation): Renamed
	to _lineLayoutInfo.
	* Source/GSSimpleLayoutManager.m: Updated for change.

Tue Oct  1 16:58:36 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextView.m ([NSTextView -moveToEndOfLine:]): Fixed
	moving to the end of 'one before the last' line.
	([NSTextView -moveToEndOfParagraph:]): Idem.

Tue Oct  1 16:40:29 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.m
	([-glyphIndexForPoint:inTextContainer:fractionOfDistanceThroughGlyph:]):
	Fix the insertion point positioning when clicking beyond the last
	character of a line in an NSTextView, or before the first one;
	special care to be used for the last line in the textview
	(Originated by a patch by David Ayers <d.ayers@inode.at>, modified
	by me).

2002-09-27  Richard Frith-Macdonald <rfm@gnu.org>
